--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "path": "^0.12.7",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-phone-input-2": "^2.15.1",
     "react-redux": "^9.2.0",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.10"
